Refactor error handling and response structure. Added base error response. Update handling