@@ -1,6 +1,6 @@
 package com.github.discovery126.greenimpact.exception;
 
-import com.github.discovery126.greenimpact.dto.ErrorDto;
+import com.github.discovery126.greenimpact.dto.BaseErrorResponse;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.HttpStatusCode;
@@ -19,50 +19,31 @@ import java.util.List;
 @ControllerAdvice
 public class CustomExceptionHandler extends ResponseEntityExceptionHandler {
 
-    @ExceptionHandler({UsernameAlreadyExistsException.class,
-            EmailAlreadyExistsException.class,
-            TaskAlreadyTakenException.class,
-            RewardOutOfStockException.class,
-            UserAlreadyRegisteredEventException.class,
-            UserAlreadyConfirmException.class})
-    protected ResponseEntity<ErrorDto> handleExistsException(RuntimeException ex) {
-        return ResponseEntity.status(HttpStatus.CONFLICT)
-                .body(new ErrorDto(List.of(ex.getMessage())));
+    @ExceptionHandler(CustomException.class)
+    public ResponseEntity<BaseErrorResponse> handleCustomException(CustomException ex) {
+
+        return ResponseEntity
+                .badRequest()
+                .body(new BaseErrorResponse(HttpStatus.BAD_REQUEST.value(),
+                        Collections.singletonList(ex.getMessage())));
     }
 
     @ExceptionHandler(UnauthorizedException.class)
-    protected ResponseEntity<ErrorDto> handleUnauthorizedException(UnauthorizedException ex) {
+    protected ResponseEntity<BaseErrorResponse> handleUnauthorizedException(UnauthorizedException ex) {
 
-        return ResponseEntity.status(HttpStatus.UNAUTHORIZED)
-                .body(new ErrorDto(List.of(ex.getMessage())));
+        return ResponseEntity
+                .badRequest()
+                .body(new BaseErrorResponse(HttpStatus.UNAUTHORIZED.value(),
+                        Collections.singletonList(ex.getMessage())));
     }
 
-    @ExceptionHandler({RoleNotFoundException.class,
-            CityNotFoundException.class,
-            UserNotFoundException.class,
-            NotFoundOpenCageException.class,
-            EventNotFoundException.class,
-            RewardCategoryNotFoundException.class,
-            RewardNotFoundException.class,
-            TaskCategoryNotFoundException.class,
-            TaskNotFoundException.class,
-            PhotoNotFoundException.class,
-            BadEventCodeException.class,
-            TaskAlreadyAnsweredException.class,
-            BadCommentException.class,
-            NotEnoughPointsException.class})
-    protected ResponseEntity<ErrorDto> handleNotFoundException(RuntimeException ex) {
+    @ExceptionHandler(FileStorageException.class)
+    protected ResponseEntity<BaseErrorResponse> handleNotFoundOpenCageApiException(NotFoundOpenCageApiException ex) {
 
-        return ResponseEntity.status(HttpStatus.BAD_REQUEST)
-                .body(new ErrorDto(List.of(ex.getMessage())));
-    }
-
-    @ExceptionHandler({NotFoundOpenCageApiException.class,
-            FileStorageException .class})
-    protected ResponseEntity<ErrorDto> handleNotFoundOpenCageApiException(NotFoundOpenCageApiException ex) {
-
-        return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
-                .body(new ErrorDto(List.of(ex.getMessage())));
+        return ResponseEntity
+                .badRequest()
+                .body(new BaseErrorResponse(HttpStatus.UNAUTHORIZED.value(),
+                        Collections.singletonList(ex.getMessage())));
     }
 
     @Override
@@ -77,14 +58,18 @@ public class CustomExceptionHandler extends ResponseEntityExceptionHandler {
                 .map(FieldError::getDefaultMessage)
                 .toList();
 
-        return ResponseEntity.badRequest()
-                .body(new ErrorDto(errors));
+        return ResponseEntity
+                .badRequest()
+                .body(new BaseErrorResponse(HttpStatus.BAD_REQUEST.value(),errors));
+
 
     }
     @ExceptionHandler(BadCredentialsException.class)
-    public ResponseEntity<Object> handleBadCredentialsException(BadCredentialsException ex) {
-        return ResponseEntity.status(HttpStatus.UNAUTHORIZED)
-                .body(new ErrorDto(Collections.singletonList("Неправильный email или пароль")));
+    public ResponseEntity<BaseErrorResponse> handleBadCredentialsException(BadCredentialsException ex) {
+        return ResponseEntity
+                .badRequest()
+                .body(new BaseErrorResponse(HttpStatus.UNAUTHORIZED.value(),
+                        Collections.singletonList(ValidationConstants.BAD_CREDENTIALS)));
     }
 
 }
